--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = "https://example.com"
+baseURL = "https://omniscale-ai.github.io/"
 
 # This is a "one page"-website, so we do not need these kinds of pages...
 disableKinds = ["section", "taxonomy", "term", "RSS", "robotsTXT"]
@@ -9,7 +9,7 @@ defaultContentLanguage = "en"
 theme = "scroll"
 
 # The browser tab name
-title = "Jane Doe - Nutrition Coach & Chef Consultant"
+title = "Omniscale Intelligence Initiative"
 
 # In order to add version information in the page's footer set to true.
 # enableGitInfo = true
@@ -69,7 +69,7 @@ enableEmoji = true
     showFooterLinks = false
 
     [params.meta]
-        keywords = "some, keywords, for, seo, you, know, google, duckduckgo, and, such"
+        keywords = "omniscale, science, ai, multiscale, model"
 
     # [[params.contacts]]
     #     label = "phone"
@@ -104,7 +104,7 @@ enableEmoji = true
     contentDir = "content/en"
 
   [languages.de]
-    title = "Erika Musterfrau - Ernährungshilfe & Kochberatung"
+    title = ""
     weight = 20
     contentDir = "content/de"
     languageName = "Deutsch"
